# authmail-relay

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DONE.md  Dockerfile  EVAL.md  LICENSE  README.ko.md  README.md  SECURITY.md  SPEC.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: GATE-ADDENDUM.md
.claude/learnings/: index.md
.claude/learnings/code/: learnings.md
.claude/learnings/design/: learnings.md
.claude/learnings/git/: learnings.md
.claude/learnings/idea/: learnings.md
.claude/workflow/gate-code-2026-05-16-001/: SUMMARY.md
.claude/workflow/gate-code-2026-05-16-001/baseline/: git.txt  tests.txt
.claude/workflow/gate-code-2026-05-16-001/reviews/: adversarial.md  bmad-code-review.md  edge-cases.md  review.md
.claude/workflow/gate-code-fix-2026-05-18-001/: SUMMARY.md
.claude/workflow/gate-code-fix-2026-05-18-003/: SUMMARY.md
.claude/workflow/gate-code-fix-2026-05-18-005/: SUMMARY.md
.claude/workflow/gate-code-fix-2026-05-18-007/: SUMMARY.md
.claude/workflow/gate-code-verify-2026-05-18-002/: SUMMARY.md
.claude/workflow/gate-code-verify-2026-05-18-004/: SUMMARY.md
.claude/workflow/gate-code-verify-2026-05-18-006/: SUMMARY.md
.claude/workflow/gate-code-verify-2026-05-18-008/: SUMMARY.md
.claude/workflow/gate-release-2026-05-16-001/: SUMMARY.md
.claude/workflow/gate-release-2026-05-16-001/audit/: adversarial.md  cso.md  docs-ops.md
.claude/workflow/gate-release-2026-05-18-001/: SUMMARY.md
.claude/workflow/gate-release-fix-2026-05-18-002/: SUMMARY.md
.claude/workflow/gate-release-verify-2026-05-18-003/: SUMMARY.md
.claude/workflow/gate-release-verify-2026-05-18-004/: SUMMARY.md
.claude/workflow/gate-test-fix-2026-05-18-001/: SUMMARY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
authmail_relay/: __init__.py  __main__.py  api.py  async_client.py  client.py  logging_config.py  notifiers.py  sender.py  webhooks.py
docs/: alternatives.md  api.md  configuration.md  deployment.md  index.html  operations.md  providers.md  supabase-auth.md  usage.html  usage.ko.html  webhooks.md
docs/claude/: README.md  always-on-skills.md  development-workflow.md  operating-principles.md  portfolio-showcase-rules.md  project-context.md  project-overview.md  refactor-gates.md  release-and-git-hygiene.md  repository-map.md  security-and-secrets.md  testing-and-validation.md
docs/process/: compound-learning-loop.md  gate-closeout-checklist.md  subagent-policy.md
docs/runbooks/: api-key-rotation.md  public-deploy-readiness.md  pypi-yank-hotfix.md  smtp-disconnect-uncertain.md  smtp-outage.md  webhook-outage.md
docs/solutions/conventions/: validate-build-system-deps-2026-05-21.md
docs/solutions/documentation-gaps/: bootstrap-agent-harness-docs-2026-05-28.md  public-release-docs-must-match-runtime-config-2026-05-21.md
docs/solutions/workflow-issues/: autosave-hook-creates-noisy-commits-2026-05-21.md  dependabot-comment-drift-chore-cleanup-2026-05-21.md  gh-cli-workflow-scope-required-for-actions-prs-2026-05-21.md  major-version-dependabot-actions-bump-review-checklist-2026-05-21.md  verify-pr-state-before-acting-2026-05-21.md
email_service/: __init__.py  __main__.py  api.py  async_client.py  client.py  metrics.py  notifiers.py  sender.py  url_validation.py  webhooks.py
examples/: django_integration.py  fastapi_integration.py  flask_integration.py  integration_test_with_capture.py
reports/: 01-qa-report.md  02-pr-review.md  03-investigation.md  04-security-audit.md  05-health.md  06-office-hours-design.md  07-ceo-plan.md  08-eng-review-test-plan.md  09-design-review.md  10-devex-review.md
roadmap/: ROADMAP.md  phase-1-security.md  phase-2-dx.md  phase-3-observability.md  phase-4-reliability.md  phase-5-polish.md
skills/email-service-conventions/: SKILL.md
skills/karpathy-guidelines/: SKILL.md
tests/: test_api.py  test_async_client.py  test_authmail_relay.py  test_cli.py  test_client.py  test_email_service.py  test_legacy_email_service_shim.py  test_observability.py  test_p0_fixes.py  test_p1_fixes.py  test_phase4.py
