[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-service"
version = "0.4.0"
description = "Reusable SMTP email service with pluggable notifiers (magic-link, OTP)"
requires-python = ">=3.10"
dependencies = []

# TODO: generate a `requirements.lock` (e.g. via `uv lock` or `pip-compile`) to
# pin transitive dependencies once a lock-file tool is available in CI.
[tool.setuptools.packages.find]
include = ["email_service*"]
exclude = ["tests*", "examples*", "skills*", "roadmap*", "reports*", ".claude*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27,<1"]
http = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "httpx>=0.27,<1",
    "prometheus-client>=0.20",
    "python-json-logger>=2.0",
]
